--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -716,27 +716,31 @@ h4{color:#726973;}
     width: 100%;
     height:2em;
     display:block;
-    margin-bottom: 1em;
+    margin-bottom: 3em;
 }
 #search > form{
     text-align: center;
 }
 #search > form >select{
-    height:2em;
+    height:1.7em;
     margin-right:0.5em;
+     font-size:1.5em
 }
 #search > form > input:nth-child(2){
-    height:2em;
+    height:1.7em;
+    width:7em;
     margin-right: 0.5em;
     padding-left: 0.5em;
+    font-size:1.5em
 }
 #search > form > input:nth-child(3){
-    height:2em;
-    width: 5em;
+    height:1.7em;
+    width: 3em;
     background-color: #87ded2;
     border-radius: 0.5em;
     border: none; 
     color: #fdfdfd;
+    font-size:1.5em
 }
 .life_icon{
     width: 100%;
@@ -981,6 +985,10 @@ h4{color:#726973;}
     height: 2em;
     font-size: 1.2em;
 }
+.commu_table> thead >tr:nth-child(even){
+	background-color:#ddd;
+}
+
 .commu_table> thead >tr>th{ 
     border-bottom: 2px solid rgb(185, 185, 185);
 }
