--- a/WebContent/css/style_sh.css
+++ b/WebContent/css/style_sh.css
@@ -3,6 +3,7 @@
     margin:0;
     padding:0;
     font-family: "Roboto",sans-serif;
+    color:#565656
 }
 a{
     text-decoration: none;
@@ -157,7 +158,7 @@ input{
     color: #888;
 } 
 .ft_height{
-    margin-top: 18em;
+    margin-top: 9em;
 }
 .ft_height2{
     margin-top: 30em;
