--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -716,25 +716,25 @@ h4{color:#726973;}
     width: 100%;
     height:2em;
     display:block;
-    margin-bottom: 3em;
+    margin-bottom: 1em;
 }
 #search > form{
     text-align: center;
 }
 #search > form >select{
-    height:1.7em;
+    height:1.3em;
     margin-right:0.5em;
-     font-size:1.5em
+     font-size:1.3em
 }
 #search > form > input:nth-child(2){
-    height:1.7em;
+    height:1.1em;
     width:7em;
     margin-right: 0.5em;
     padding-left: 0.5em;
     font-size:1.5em
 }
 #search > form > input:nth-child(3){
-    height:1.7em;
+    height:1.2em;
     width: 3em;
     background-color: #87ded2;
     border-radius: 0.5em;
@@ -971,38 +971,36 @@ h4{color:#726973;}
 /* ------------------------------------------ */
 .commu_table{
     border-collapse: collapse;
-    /* border-top: 3px solid #888; */
-    /* border-bottom: 3px solid #888; */
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
     width: 100%;
- 
-
 }
 
-
+.sub_title{
+    color: #ddd;
+    float:left;
+}
+.sc_sub{
+    margin-left:0.5em;
+}
 .commu_table> thead >tr{
     /* background-color: #fcd2dc; */
     margin-bottom: 3em;
     height: 2em;
     font-size: 1.2em;
 }
-.commu_table> thead >tr:nth-child(even){
-	background-color:#ddd;
-}
-
-.commu_table> thead >tr>th{ 
-    border-bottom: 2px solid rgb(185, 185, 185);
-}
 
 .commu_table> tbody > tr{
-    height:2em;
+    border-bottom: solid 1px #ddd;
+    height:3.5em;
     margin-top:2em;
 }
-.commu_table> tbody > tr:first-child{
-    height:1em;
-    
+
+.commu_table> tbody > tr > td > a{
+    margin-bottom: 0.5em;
 }
 
-.commu_table> tbody >tr>td:nth-child(1){
+/* .commu_table> tbody >tr>td:nth-child(1){
     width: 16em;
     text-align: left;
     padding-left: 1em;
@@ -1016,7 +1014,7 @@ h4{color:#726973;}
 .commu_table> tbody >tr>td:nth-child(3){
     width: 16em;
     color:rgb(185, 185, 185);
-}
+} */
 
 
 .commu_btn{
