--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -16,9 +16,9 @@
  /* background: linear-gradient(to left, #fcc4d1, #d7c0f8); */
 *{
     margin: 0; padding: 0;
-    font-family: 'BBTreeGB';
+    /* font-family: 'BBTreeGB'; */
     /* font color */
-    color:#565656;
+    color:#989898;
 }
 
 li{list-style: none;}
@@ -262,7 +262,7 @@ h4{color:#726973;}
     position: fixed;
     width: 100%;
     height: 100%;
-    /* background-color: #ddd; */
+    background-color: rgba(255,255,255,0.6);
     top:0; right:0;
     z-index: 9;
 }
@@ -642,14 +642,14 @@ h4{color:#726973;}
     height:30em;
 }
 .alam > ul{
-    width: 100%;
+    width: 93%;
     position: relative
 }
 .alam > ul > li{
     width: 100%;
-    border-radius: 1em;
+    /* border-radius: 1em; */
     margin-top: 2em;
-
+    border-bottom: solid 1px #ddd;
 }
 .alam_left_p{
     background-color: #ff4a91;
@@ -689,8 +689,8 @@ h4{color:#726973;}
 }
 .alam_icon{
     background: url(/img/close.png) no-repeat left;
-    height:30px;
-    width:3em;
+    height:20px;
+    width:2em;
     float:right;
     
 }
@@ -722,25 +722,25 @@ h4{color:#726973;}
     text-align: center;
 }
 #search > form >select{
-    height:1.3em;
+    height:2em;
     margin-right:0.5em;
-     font-size:1.3em
+    font-size:1em;
 }
 #search > form > input:nth-child(2){
-    height:1.1em;
-    width:7em;
+    height:2em;
+    width:11em;
     margin-right: 0.5em;
     padding-left: 0.5em;
-    font-size:1.5em
+    font-size:1em
 }
 #search > form > input:nth-child(3){
-    height:1.2em;
-    width: 3em;
+    height:2em;
+    width: 4em;
     background-color: #87ded2;
     border-radius: 0.5em;
     border: none; 
     color: #fdfdfd;
-    font-size:1.5em
+    font-size: 1em;
 }
 .life_icon{
     width: 100%;
@@ -753,12 +753,14 @@ h4{color:#726973;}
     float:left;
     cursor: pointer;
     margin-left: 1em;
+    margin-bottom: 1em;
 }
 .life_icon > li > img{display: block;}
 .life_icon::after{clear: both; content:""; display:block;}
 .life_con{
     margin-top: 2em;
 }
+
 .life_list > li > span{
     width: 10em;
     height: 100%;
@@ -781,6 +783,7 @@ h4{color:#726973;}
     font-size: 1.2em;
     margin-top:0.3em; 
     margin-left: 3em;
+    margin-bottom: 0.5em;
 }
 .meal_color >a{
     display: inline;
@@ -795,6 +798,7 @@ h4{color:#726973;}
     font-size: 1.2em;
     margin-top: 0.3em;
     margin-left: 3em;
+    margin-bottom: 0.5em;
     
 }
 .defecate_color > a{
@@ -809,6 +813,7 @@ h4{color:#726973;}
     font-size: 1.2em;
     margin-top: 0.3em;
     margin-left: 3em;
+    margin-bottom:0.5em;
 }
 .sleep_color>a{
     display: inline;
@@ -822,7 +827,7 @@ h4{color:#726973;}
     position: fixed;
     width: 100%;
     height: 100%;
-    /* background-color: #ddd; */
+    background-color:rgba(255,255,255,0.6);
     top:0; right:0;
     z-index: 9;
 }
@@ -873,7 +878,7 @@ h4{color:#726973;}
     position: fixed;
     width: 100%;
     height: 100%;
-    /* background-color: #ddd; */
+    background-color:rgba(255,255,255,0.6);
     top:0; right:0;
     z-index: 9;
 }
@@ -924,6 +929,7 @@ h4{color:#726973;}
     width: 100%;
     height: 100%;
     /* background-color: #ddd; */
+    background-color:rgba(255,255,255,0.6);
     top:0; right:0;
     z-index: 9;
 }
@@ -977,7 +983,7 @@ h4{color:#726973;}
 }
 
 .sub_title{
-    color: #ddd;
+    color: #bdbdbd;
     float:left;
     font-size: 0.85em;
 }
@@ -988,7 +994,7 @@ h4{color:#726973;}
     float:right;
     margin-right:0.5em;
     font-size: 0.78em;
-    color:#ddd;
+    color:#bdbdbd;
 }
 .commu_table> thead >tr{
     /* background-color: #fcd2dc; */
