--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -709,14 +709,14 @@ h4{color:#726973;}
     padding-top:4em;
 }
 .life_title{
-    margin-top: 5em;
+    margin-top: 4em;
 }
 /* life_search */
 #search{
     width: 100%;
     height:2em;
     display:block;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 }
 #search > form{
     text-align: center;
@@ -762,7 +762,7 @@ h4{color:#726973;}
 }
 
 .life_list > li > span{
-    width: 10em;
+    width: 11em;
     height: 100%;
 
 }
@@ -983,8 +983,8 @@ h4{color:#726973;}
 }
 
 .sub_title{
-    color: #bdbdbd;
-    float:left;
+    color: #b9b9b9;
+    float: left;
     font-size: 0.85em;
 }
 .sc_sub{
@@ -994,7 +994,7 @@ h4{color:#726973;}
     float:right;
     margin-right:0.5em;
     font-size: 0.78em;
-    color:#bdbdbd;
+    color:#b9b9b9;
 }
 .commu_table> thead >tr{
     /* background-color: #fcd2dc; */
