--- a/WebContent/css/style_sh.css
+++ b/WebContent/css/style_sh.css
@@ -3,7 +3,7 @@
     margin:0;
     padding:0;
     font-family: "Roboto",sans-serif;
-    color:#565656
+    color:#656565;
 }
 a{
     text-decoration: none;
