--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -200,6 +200,7 @@ h4{color:#726973;}
     /* background-color: #fdfdfd; */
     /* exam  */
     height: 100%;
+    margin-bottom:10%;
 }
 .page{
     background-color: #fdfdfd;
@@ -382,7 +383,7 @@ h4{color:#726973;}
     top:-81px;
     left:0;
     right:0;
-    border-radius: 0.5em;
+    border-radius: 0 0 0.5em 0.5em;
     
 }
 #alam_pop {padding-left: 1em;}
@@ -593,6 +594,13 @@ h4{color:#726973;}
 
 }
 /* statistic --------------------------------*/
+#columnchart_material4{
+	position:absolute;
+	left:4px;
+	display:none;
+		
+}
+
 #content{
     overflow: hidden;
 }
@@ -784,7 +792,7 @@ h4{color:#726973;}
     display:block;
     font-size: 1.2em;
     margin-top:0.3em; 
-    margin-left: 3em;
+    margin-left: 4.2em;
     margin-bottom: 0.5em;
 }
 .meal_color >a{
@@ -799,7 +807,7 @@ h4{color:#726973;}
     display:block;
     font-size: 1.2em;
     margin-top: 0.3em;
-    margin-left: 3em;
+    margin-left: 4.2em;
     margin-bottom: 0.5em;
     
 }
@@ -814,7 +822,7 @@ h4{color:#726973;}
     display:block;
     font-size: 1.2em;
     margin-top: 0.3em;
-    margin-left: 3em;
+    margin-left: 4.2em;
     margin-bottom:0.5em;
 }
 .sleep_color>a{
@@ -862,6 +870,7 @@ h4{color:#726973;}
     float:left;
     margin-bottom:1em;
 }
+#mL{padding-left:0.5em;}
 .meal_con{
     position:fixed;
     display:none;
@@ -870,6 +879,7 @@ h4{color:#726973;}
 .meal_con > forms{
     text-align: center;
     line-height: 3em;
+    padding-left: 2.5em;
 }
 .meal_con> forms > input:last-child{
     width:13em;
@@ -903,7 +913,8 @@ h4{color:#726973;}
     margin-left: 50%;
     transform: translate(-50%);
     text-align: center;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
+
 }
 .defe_bg > div > forms > div{
     margin-left: 50%;
@@ -920,7 +931,9 @@ h4{color:#726973;}
 .defe_con > forms{
     text-align: center;
     line-height: 3em;
+    margin-left:4em;
 }
+.defe_con > forms > input{margin-right:1em;}
 .defe_con> forms > input:last-child{
     width:13em;
 }
@@ -954,7 +967,7 @@ h4{color:#726973;}
     margin-left: 50%;
     transform: translate(-50%);
     text-align: center;
-    margin-bottom: 1em;
+
 }
 .sleep_bg > div > forms > div{
     margin-left: 50%;
@@ -979,7 +992,7 @@ h4{color:#726973;}
 	margin-right:1em;
 }
 #sleep_btn{
-	margin-top:0em;
+	margin-top:0.2em;
 }
 /* ------------------------------------------ */
 .commu_table{
@@ -1020,21 +1033,7 @@ h4{color:#726973;}
     margin-bottom: 0.5em;
 }
 
-/* .commu_table> tbody >tr>td:nth-child(1){
-    width: 16em;
-    text-align: left;
-    padding-left: 1em;
-    
-}
-.commu_table> tbody >tr>td:nth-child(2){
-    width: 10em;
-    text-align: center;
-    color:rgb(185, 185, 185);
-}
-.commu_table> tbody >tr>td:nth-child(3){
-    width: 16em;
-    color:rgb(185, 185, 185);
-} */
+#commu_line{height:1em;}
 
 
 .commu_btn{
@@ -1071,15 +1070,16 @@ h4{color:#726973;}
     padding-top:0.5em;
 }
 .write_radio tr{
-    height:3em;
+    height:2em;
 }
 .write_radio th{
    margin-right:3em;
    text-align: left;
    width:100%;
 }
+
 .check > th{
-    width:3em;
+    width:6em;
 }
 
 /* commu_con */
@@ -1089,6 +1089,10 @@ h4{color:#726973;}
     width:25em;
     height:3em;
     padding-left:0.5em;
+}
+.commu_con_mg{
+	float:left;
+	margin-top:1em;
 }
 .write_con{height:10em}
 
